Fixes bug on safari

--- a/src/client/common/styles/media-query.sass
+++ b/src/client/common/styles/media-query.sass
@@ -172,3 +172,7 @@
     // display: none
   .table-container
     width: 500px
+
+.rated-text:not(:root:root)
+  font-weight: 400
+  // display: none
